# ai-hedge-fund-crypto

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  README_CN.md  backtest.py  config.example.yaml  config.yaml  deploy.ps1  main.py  output.json  pyproject.toml  requirements.txt
app/: backtest.py  config.yaml  debug_backtest.py  lambda_function.py  main.py
app/src/: __init__.py
app/src/agent/: agent.py  workflow.py
app/src/backtest/: backtester.py
app/src/graph/: base_node.py  data_node.py  portfolio_management_node.py  risk_management_node.py  start_node.py  state.py
app/src/indicators/: __init__.py  general_indicators.py
app/src/llm/: __init__.py
app/src/prompts/: rule copy.txt  rule.txt  rule_blue_black.txt  (+1 more)
cache/: BTCUSDT_1h_20250401_20250501.csv  BTCUSDT_4h_20250401_20250402.csv
src/: backtest.py
src/agent/: __init__.py  agent.py
src/agents/: portfolio_manager.py  risk_manager.py  technicals.py
src/api/: binance_api.py
src/backtest/: backtester.py
src/backtester/: backtester.py
src/data/: cache.py  models.py
src/gateway/: __init__.py
src/graph/: __init__.py  create_workflow.py  data_node.py  empty_ndoe.py  node.py  portfolio_management_node.py  risk_management_node.py  start_node.py  state.py
src/llm/: __init__.py  llm.py  models.py
src/strategies/: __init__.py  macd_strategy.py  my_strategy.py  rsi_strategy.py
src/utils/: __init__.py  analysts.py  binance_data_provider.py  constants.py  display.py  dydx_client.py  kucoin_order_executor.py  settings.py  util_func.py  visualize.py
test/: test_merged_dicts.py
(+24 files in other folders)
